# MultiDrone

./: .gitignore  CMakeLists.txt  CachePrefetchManagement.c  CachePrefetchManagement.h  CachePrefetchManagementApi.h  Drones.sln  ErrorLog.txt  Filter.cpp  Filter.h  FilterFile.cpp  FilterFile.h  FilterTest.cpp  HashTable.cpp  HashTable.h  Image.cpp  Image.h  Image.natvis  Master_Slaves_Management.cpp  Master_Slaves_Management.sln  Master_Slaves_Management.vcxproj  Master_Slaves_Management.vcxproj.filters  MatchKD.cpp  MatchKD.h  README.md  Test.cpp  Tests (1).cpp  TestsByDoctest.cpp  doctest.h  functions.cpp  functions.h  guide.docx  matchFeatures .cpp  matchFeatures .h  matchFeatures.cpp  matchFeatures.h  test1.cpp  tests.cpp
Communication/: CMakeLists.txt
Communication/Communication/: BWImageHandler.h  ColorImageHandler.cpp  ColorImageHandler.h  Data.cpp  DataHandler.h  Server_function.cpp  Server_function.h  Server_test.cpp  TextHandler.cpp  main.cpp
Communication/Communication/x64/Debug/: communication.exe.recipe  vc143.idb
Communication/Communication/x64/Debug/communication.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  communication.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Communication/Data_Comperession/: CompressionTests.cpp  Data_Comperession.vcxproj  Data_Comperession.vcxproj.filters  Data_Comperession.vcxproj.filters(1).txt  Data_Comperession.vcxproj.filters.txt  Data_Compression  Data_Compression.h  HuffmanCompression.cpp  HuffmanCompression.h  HuffmanNode.cpp  HuffmanNode.h  HuffmanRescue.cpp  HuffmanRescue.h  Image.h  ImageConversionTests.cpp  ImageConversions.cpp  ImageConversions.h  RescueTests.cpp  main.cpp
Communication/Data_Compression/: CompressionTests.cpp  Data_Compression.h  HuffmanCompression.cpp  HuffmanCompression.h  HuffmanNode.cpp  HuffmanNode.h  HuffmanRescue.cpp  HuffmanRescue.h  Image.h  ImageConversionTests.cpp  ImageConversions.cpp  ImageConversions.h  RescueTests.cpp
Communication/Data_transferring/: TransferData.cpp  TransferData.h  TransferData_test.cpp
Communication/Recovery/: BWImageHandler.cpp  BWImageHandler.h  ColorImageHandler.h  ConvertDataTest.cpp  EncodeTest.cpp  GaliosField.cpp  GaliosFieldTest.cpp  GaloisField.h  PolynimTest.cpp  Polynom.cpp  Polynom.h  ReedSoloEncode.cpp  ReedSoloEncode.h  ReedSolomon.cpp  ReedSolomon.h  TextHandler.h  UsePoly.cpp  UsePoly.h  UsePolynomTest.cpp
Communication/Socket/: Socket_test.cpp
Communication/Socket_communication/: DroneCommunicationManager.cpp  DroneCommunicationManager.h  DroneCommunicationManager_test.cpp  Server_function.cpp  Server_function.h  Server_test.cpp  SlaveDroneCommunicationManager.cpp  SlaveDroneCommunicationManager.h  SlaveDroneCommunicationManager_main.cpp
MasterCacheImages/MasterCacheImages/: CMakeLists.txt  Doctest.cpp  MasterCacheImages.c  MasterCacheImages.h
SYCL/SYCL/: AES.cpp  AES.h  CMakeLists.txt  EllipticCurve.cpp  KeyPair.cpp  MasterCacheImages.h  RSA.cpp  SYCL.cpp  SYCL.vcxproj  SYCL.vcxproj.filters  SyclSearch.cpp  Utils.cpp
SYCL/SYCL/x64/Debug/: SYCL.exe.recipe
SYCL/SYCL/x64/Debug/SYCL.tlog/: SYCL.lastbuildstate  icx-cl-clang-cl-clang-offload-bundler-llvm-objcopy.delete.1.tlog  icx-cl-clang-cl-clang-offload-bundler.12236-llvm-objcopy.delete.1.tlog  icx-cl-clang-cl-clang-offload-bundler.12624-llvm-objcopy.delete.1.tlog  icx-cl-clang-cl-clang-offload-bundler.16100-llvm-objcopy.delete.1.tlog  icx-cl-clang-cl-clang-offload-bundler.18144-llvm-objcopy.delete.1.tlog  icx-cl-clang-cl-clang-offload-bundler.18212-llvm-objcopy.delete.1.tlog  (+255 more)
Sample Cmake/Sample Cmake/: CMakeLists.txt  Doctest.cpp
Security/: CMakeLists.txt  Security.sln
Security/Security/: AES.cpp  AES.h  API.cpp  API.h  ECC.cpp  ECC.h  ECC_impl.h  EllipticCurve.cpp  EllipticCurve.h  EncryptionResult.h  KeyPair.cpp  KeyPair.h  Logger.cpp  Logger.h  Point.cpp  Point.h  RSA.cpp  RSA.h  Security.vcxproj  Security.vcxproj.filters  Utils.cpp  Utils.h  main.cpp  test_ECC.cpp  test_EllipticCurve.cpp  test_KeyPair.cpp  test_Point.cpp  test_Utils.cpp  tests.cpp
Security/Security/RSA/: RSA.cpp  RSA.h
Security/Security/RSA/RSA_tests/: RSA_tests.cpp  RSA_tests.h
Security/Security/x64/Debug/: Security.exe.recipe  Security.ilk  vc143.idb
Storage/: CMakeLists.txt  Cache_Mng.c  Cache_Mng.h  DiskManagment.c  DiskManagment.h  DiskManagmentApi.h  Disk_Mng_Master.c  Disk_Mng_Master.h  Disk_Mng_Master_API.h  Disk_Mng_Master_Sycl.cpp  Doctest.cpp  MasterCacheImages.c  MasterCacheImages.h  Mock.h  Storage.sln  Storage.vcxproj  cpp.hint  errors.log.txt
Storage/enc_temp_folder/bad79efee345d3565a90a8a58987bba7/: Doctest.cpp
Storage/x64/Debug/: Storage.exe.recipe  Storage.ilk  Storage.vcxproj.FileListAbsolute.txt  vc143.idb
Storage/x64/Debug/Storage.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Storage.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
communication/: CMakeLists.txt  communication.sln
communication/Validation/: CRCalgoritm.cpp  CRCalgoritm.h  CRCalgoritm_test.cpp  Convert.cpp  Convert.h  Convert_test.cpp  D3Validation.cpp  D3Validation.h  MatValidation.cpp  MatValidation.h  Validation.cpp  Validation.h  Validation_test.cpp  VecValidation.cpp  VecValidation.h
communication/communication/: CRCalgoritm_test.cpp  Convert.cpp  Convert_test.cpp  D3Message.cpp  D3Message.h  D3Message_test.cpp  D3Validation.cpp  D3Validation.h  Data.h  Data_test.cpp  MatMessage.cpp  MatMessage.h  MatMessage_test.cpp  Message.cpp  Message.h  Meta_Data.cpp  Meta_Data.h  Validation.cpp  Validation.h  Validation_test.cpp  VecMessage.cpp  VecMessage.h  VecMessage_test.cpp  communication.cpp  communication.vcxproj  communication.vcxproj.filters
management-queues/: .gitignore  CMakeLists.txt
management-queues/management-queues/: Message.cpp  Message.h  MessageParams.cpp  MessageParams.h  MessageType.h  Priority.h  Queue.cpp  Queue.h  Source.cpp  Tests.cpp  dataOfMessage.h
management-queues/management-queues/x64/Debug/: management-queues.exe.recipe  vc143.idb
(+289 files in other folders)
